--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uunigwe/ApprenticeShipApp"
+},
+  "author": "Ugo Unigwe",
+  "license": "MIT"
 }
